--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -4,12 +4,9 @@ name: CI
 
 # Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
+  # Triggers the workflow on push events but only for the "main" branch
   push:
     branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -27,8 +24,8 @@ jobs:
 
       # Tag a new version
       # Default: patch bump
-      # Add #minor to pull request message for a minor bump
-      # Add #major to pull request message for a major bump
+      # Add #minor to pull request or commit message for a minor bump
+      # Add #major to pull request or commit message for a major bump
       - name: Bump version and push tag
         uses: anothrNick/github-tag-action@1.36.0
         env:
